--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "dummy-audio-context",
     "description": "Dummy Web Audio API",
-    "author": "Nick Jillings",
+    "author": "Nick Jillings <nicholasjillings@yahoo.co.uk>",
     "version": "0.0.1",
     "devDependencies": {
-        "jshint": "^2.6.0"
+        "mocha": "^3.5.2"
     },
     "scripts": {
         "test": "mocha"
